# sourya

./: Airport.csv  Backup.postman_dump.json  R_code_v2.R  a2.ipynb  a2.py  addconfusion.data  adjmatrixcount.csv  adjmatrixdist.csv  chart.html  cricinfo.ipynb  cricinfo.py  cricket.ipynb  cricket.py  delconfusion.data  detect.py  example.csv  face.py  face_recognizer.py  final_ID_v2.csv  flight.py  foo.csv  football.py  graph.py  helloworld.html  left.jsp  lift.py  map.py  mcl_clustering.py  motion_detector.py  movie.py  my_file.py  my_file1.py  new.py  optical_motion.py  plot1.html  plot2.html  posts_in_fb_page.py  revconfusion.data  season.jsp  serial.ipynb  (+26 more)
adroint/: adroint.ipynb
adroint/algos/: airports.py  cities.py  date_time.py  sky_trek.py
adroint/training_set/: 1.txt  2.txt  3.txt  4.txt  5.txt
anomaly_detection_code/: CMakeLists.txt
cam/: new.py  smile.py  test.py  test1.py  test3.py  test4.py  test5.py
quantum/: POBoxes.txt  approach.txt  output.txt  sourcecode.py
static/: date.txt  js.rar  ssn_scroll.txt
static/css/: jquery.mCustomScrollbar.css  style.css
static/img/: 3.psd  bback.psd  him_sample.psd  (+1 more)
video4/: chart1.html  chart2.html  output_video_clip_3.avi
video5/: chart1.html  chart2.html  output_video_clip_1.avi  output_video_clip_10.avi  output_video_clip_11.avi  output_video_clip_2.avi  output_video_clip_5.avi  output_video_clip_7.avi  output_video_clip_8.avi  output_video_clip_9.avi
zendrive/: .Rhistory  Documentation.docx  Shake_Detection.py  a.lbl.csv  instructions.txt  m.lbl.csv  m.sensor.csv  p.lbl.csv  posi.csv  zendrive.py
(+4 files in other folders)
